--- a/index.html
+++ b/index.html
@@ -7,7 +7,36 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <img src="logo.png" class="logo" alt="">
+       <div class="content">
+        <p>We Are Almost There</p>
+        <h1> <span>Launching</span> Soon</h1>
+        <div class="launch-time">
+            <div>
+                <p id="days">00</p>
+                <span>Days</span>
+            </div>
+
+                        <div>
+                <p id="hours">00</p>
+                <span>Hours</span>
+            </div>
+
+                        <div>
+                <p id="minutes">00</p>
+                <span>Minutes</span>
+            </div>
+
+                        <div>
+                <p id="seconds">00</p>
+                <span>Seconds</span>
+            </div>
+        </div>
+            <button type="button">Learn More <img src="triangle.png" alt=""></button>
+       </div>
+       <img src="rocket.png" class="rocket" alt="">
+    </div>
 
     <script src="script.js"></script>
 </body>
