--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="logo.png" class="logo" alt="">
+        <!-- <img src=".png" class="logo" alt="AB"> -->
        <div class="content">
         <p>We Are Almost There</p>
         <h1> <span>Launching</span> Soon</h1>
